# EvoScripts

./: .gitignore  README.md  pyproject.toml
docs/: base.md
evoscripts/: __init__.py  cli.py  config.py
evoscripts/agents/: __init__.py  base.py  code_agent.py  judge_agent.py
evoscripts/orchestrator/: __init__.py  engine.py  sampler.py  state.py
evoscripts/prompts/: __init__.py  code_gen.py  judge.py
evoscripts/sandbox/: __init__.py  executor.py
evoscripts/templates/: __init__.py
templates/: manifest.yaml
templates/code/: README.md
templates/examples/non_target/: README.md
templates/output/: README.md
tests/: __init__.py
