[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evoscripts"
version = "0.1.0"
description = "TDD + Data-Driven automated JSONL data cleaning script generator"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "EvoScripts Team" }
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
evoscripts = "evoscripts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["evoscripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
